add links to figures

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -43,7 +43,7 @@ In this paper, we revisit forecasting of oil sardine landings using environmenta
 Our analysis focuses on the Kerala coast (Figure `r ref("fig:studyarea")`) region of India, where the majority of the Indian oil sardines are landed and where oil sardines comprise ca. 40% of the marine fish catch [@Srinath1998; @Vivekanandanetal2003]. This area is in the Southeast Arabian Sea (SEAS), one of world’s major upwelling zones, with seasonal peaks in primary productivity driven by upwelling caused by winds during the Indian summer monsoon [@Madhupratapetal2001; @Habeebrehmanetal2008] between June and September. Within the SEAS, the coastal zone off Kerala between 9$^\circ$N to 13$^\circ$N has especially intense upwelling due to the combined effects of wind stress and remote forcing [@Smitha2010; @Smithaetal2008].  The result is a strong temperature differential between the near-shore and off-shore and high primary productivity and chlorophyll in this region [@Madhupratapetal2001;  @Habeebrehmanetal2008; @Jayarametal2010; @Smitha2010; @Raghavanetal2010; @Chauhanetal2011].  The primary productivity peaks subside after September while mesozooplankton abundances increase and remain high in the inter-monsoon period [@Madhupratapetal2001].
 
 <!-- life cycle of the oil sardine -->
-The Indian oil sardine fishery is restricted along the narrow strip of the western India continental shelf, within 20 km from the shore.  The yearly cycle  of the fishery begins start of spawning during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969].  The mature fish migrate from offshore to coastal waters coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950], and the spawning begins during the southwest monsoon period when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008; @Nairetal2016].  Although peak spawning occurs in June to July, spawning continues into September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970] and early- and late-spawning cohorts are evident in the length distributions of the 0-year fish.  Spawning occurs in shallow waters outside of the traditional range of the fishery [@AntonyRaja1964], and after spawning the adults migrate closer to the coast and the spent fish become exposed to the fishery.
+The Indian oil sardine fishery is restricted along the narrow strip of the western India continental shelf, within 20 km from the shore.  The yearly cycle (Figure `r ref("fig:cartoon")`) of the fishery begins at the start of spawning during June – July, corresponding with the onset of the southwest monsoon [@Chidambaram1950; @AntonyRaja1969].  The mature fish migrate from offshore to coastal waters coinciding with the prevailing wind conditions [@Hornell1910]. A gradual increase in temperature ranging from 26 to 28°C is favorable for their inshore migration [@Chidambaram1950], and the spawning begins during the southwest monsoon period when temperature, salinity and suitable food availability are conducive for larval survival [@MurtyEdelman1966; @JayaprakashPillai2000; @Krishnakumaretal2008; @Nairetal2016].  Although peak spawning occurs in June to July, spawning continues into September [@AntonyRaja1969; @Hornell1910; @HornellNayudu1923; @PrabhuDhulkhed1970] and early- and late-spawning cohorts are evident in the length distributions of the 0-year fish.  Spawning occurs in shallow waters outside of the traditional range of the fishery [@AntonyRaja1964], and after spawning the adults migrate closer to the coast and the spent fish become exposed to the fishery.
 
 After eggs are spawned, they develop rapidly into larvae within 24 hrs [@Nair1959].  The phytoplankton bloom that provide sardine larvae food is dependent upon nutrient influx from coastal upwelling and runoff from rivers during the monsoon and early fall. The blooms start in the south near the southern tip of India in June, increase in intensity and spread northward up the coast [@Smitha2010]. Variation in the bloom initiation time and intensity leads to changes in the food supply and to corresponding changes in the growth and survival of larvae and in the later recruitment of 0-year sardines into the fishery [@Georgeetal2012].  Oil sardines grow rapidly during their first few months, and 0-year fish from 40mm to 100mm appear in the catch in August and September in most years [@Nairetal2016; @AntonyRaja1970].  As the phytoplankton bloom spreads northward, the oil sardines follow thus the oil sardine fishery builds from south to north during the post-monsoon period. Oil sardines remain inshore feeding throughout the winter months, until March to May when the inshore waters warm considerably and sardines move off-shore to deeper waters [@Chidambaram1950].  Catches of sardines are correspondingly low during this time for all size classes.  The age at first maturity occurs at approximately 150 mm size [@Nairetal2016], which is reached within one year.  When the monsoon returns, the oil sardine cycle begins anew.
 
@@ -66,11 +66,17 @@ Quarterly fish landing data have been collected by the Central Marine Fisheries 
 
 ## Remote-sensing data
 
-We analysed monthly composites of the following environmental data derived from satellites: Sea Surface Temperature (SST), chlorophyll-a (CHL), upwelling (UPW) and precipitation. Sea surface temperature: For 1981 to 2002, we used Pathfinder Version 5.2 product on a 4km grid, and for 2003 to 2016, we used Advanced Very-High Resolution Radiometer (AVHRR) data at a 0.1 degree spatial scale.  Chlorophyll-a, we used SeaWiFS data on a 0.1 degree spatial scale for 1981 to 2002 and MODIS data from 2003 to 2017 at 0.05° spatial scale.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from the NOAA ERDDAP server.  
+We analysed monthly composites of the following environmental data derived from satellites: Sea Surface Temperature (SST), chlorophyll-a (CHL), upwelling (UPW) and precipitation. The covariate time series wna monthly means are shown in Figure `r ref("fig:COVts")`.
+
+For sea surface temperature, we used Advanced Very-High Resolution Radiometer (AVHRR) data, which provides near-shore SST values. Although the ICOADS product provides SST values for earlier years, ICOADS does not provide accurate nearshore temperatures. For 1981 to 2002, we used the Pathfinder Version 5.2 product on a 4km grid, and for 2003 to 2016, we used Advanced Very-High Resolution Radiometer (AVHRR) data at a 0.1 degree spatial scale.  These data were provided by GHRSST
+and the US National Oceanographic Data Center.
+
+Chlorophyll-a, we used SeaWiFS data on a 0.1 degree spatial scale for 1981 to 2002 and MODIS data from 2003 to 2017 at 0.05° spatial scale.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from the NOAA ERDDAP server.  
 
 For an index of coastal upwelling, we used the sea-surface temperature differential between near shore and 3 degrees offshore as described by Naidu et al. [-@Naiduetal1999] and Smitha et al. [-@Smithaetal2008].  The index is computed as the average SST in boxes 3 degrees offshore of boxes 1-5 in Figure `r ref("fig:studyarea")` minus the average SST in boxes 1-5.  For SST, we used the remote-sensing sea-surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008].  
 
-Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017].  This time series is available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimate of precipitation over the ocean using a global 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward [@NCEI2017].  
+Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017].  This time series is available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimate of precipitation over the ocean using a global 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward [@NCEI2017].
+
 
 ## Hypotheses
 
@@ -198,7 +204,7 @@ names(catchmeds)=paste("Q",1:4,sep="")
 
 Figure `r ref("fig:catch")`. Quarterly catch data 1956-2014 from Kerala. The catches have a strong seasonal pattern with the highest catches in quarter 4  Note that quarter 3 is July-Sept and that the fishery is closed July 1 to Aug 15, thus the fishery is only open 1.5 months in quarter 3. The mean catch (metric tonnes) in quarters 1 to 4 are `r round(catchmeans["Q1"]/1000,1)`, `r round(catchmeans["Q2"]/1000,1)`, `r round(catchmeans["Q3"]/1000,1)`, and `r round(catchmeans["Q4"]/1000,1)` metric tonnes respectively.
 
-Figure `r ref("fig:cartoon")`.  Cartoon of the sardine life-cycle in the SE Indian Ocean and how it interacts with the fishery. 
+Figure `r ref("fig:cartoon")`.  The sardine life-cycle in the SE Indian Ocean and how it interacts with the fishery. 
 
 Figure `r ref("fig:COVts")`.  Remote sensing covariates used in the analysis.  All data are monthly averages over Box 4 in Figure `r ref("fig:studyarea")` on the Kerala coast off of Kochi.  Panel A) Upwelling Index. The upwelling index is the difference between the near-shore sea surface temperature (SST) and the off-shore SST defined as 3 degrees longitude offshore. Panel B) Surface chlorophyll-a (Chl-a).  The Chl-a data are only available from 1997 onward.  Panel C) Sea surface temperature constructed from Advanced Very High Resolution Radiometer (AVHRR). Panel D) Average daily rainfall (mm/day) off the Kerala coast.
 
