add more info on the remote-sensing covariates

--- a/OilSardine_NOAA_MoES.Rmd
+++ b/OilSardine_NOAA_MoES.Rmd
@@ -68,14 +68,14 @@ Quarterly fish landing data have been collected by the Central Marine Fisheries 
 
 We analysed monthly composites of the following environmental data derived from satellites: Sea Surface Temperature (SST), chlorophyll-a (CHL), upwelling (UPW) and precipitation. The covariate time series wna monthly means are shown in Figure `r ref("fig:COVts")`.
 
-For sea surface temperature, we used Advanced Very-High Resolution Radiometer (AVHRR) data, which provides near-shore SST values. Although the ICOADS product provides SST values for earlier years, ICOADS does not provide accurate nearshore temperatures. For 1981 to 2002, we used the Pathfinder Version 5.2 product on a 4km grid, and for 2003 to 2016, we used Advanced Very-High Resolution Radiometer (AVHRR) data at a 0.1 degree spatial scale.  These data were provided by GHRSST
-and the US National Oceanographic Data Center.
+For sea surface temperature, we used Advanced Very-High Resolution Radiometer (AVHRR) data, which provides nearshore SST values. Although the ICOADS product provides SST values for earlier years, ICOADS does not provide accurate nearshore temperatures. For 1981 to 2003, we used the Pathfinder Version 5.2 product on a 0.0417 degree grid. These data were provided by GHRSST
+and the US National Oceanographic Data Center. For 2004 to 2016, we used the NOAA CoastWatch sea SST products derived from NOAA's Polar Operational Environmental Satellites (POES). For Chlorophyll-a, we used the Chlorophyll-a products developed by the Ocean Biology Processing Group in the Ocean Ecology Laboratory at the NASA Goddard Space Flight Center. For 1997 to 2002, we used the Chlorophyll-a 2014.0 Reprocessing (R2014.0) product from the Sea-viewing Wide Field-of-view 
+Sensor (SeaWiFS) on the Orbview-2 satellite. These data are on a 0.1 degree grid.  For 2003 to 2017, we used the MODIS-Aqua product on a 0.05 degree grid. These CHL data are taken from measurements 
+by the Moderate Resolution Imaging Spectroradiometer (MODIS) on NASA's Aqua Spacecraft.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from the NOAA ERDDAP server [@Simons2017].  
 
-Chlorophyll-a, we used SeaWiFS data on a 0.1 degree spatial scale for 1981 to 2002 and MODIS data from 2003 to 2017 at 0.05° spatial scale.  The SST and CHL data were averaged across thirteen 1 degree by 1 degree boxes which roughly parallel the bathymetry (Figure `r ref("fig:studyarea")`).  The SST and CHL satellite data were retrieved from the NOAA ERDDAP server.  
+For an index of coastal upwelling, we used the sea-surface temperature differential between near shore and 3 degrees offshore as described by Naidu et al. [-@Naiduetal1999] and Smitha et al. [-@Smithaetal2008].  The index was computed as the average SST in box 4 of Kochi (Figure `r ref("fig:studyarea")`) minus the average SST in box 13  For SST, we used the remote-sensing sea-surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008]. The upwelling index and Chlorophyll-a blooms are strongly correlated (Figure `r ref("fig:SSTts")`).
 
-For an index of coastal upwelling, we used the sea-surface temperature differential between near shore and 3 degrees offshore as described by Naidu et al. [-@Naiduetal1999] and Smitha et al. [-@Smithaetal2008].  The index is computed as the average SST in boxes 3 degrees offshore of boxes 1-5 in Figure `r ref("fig:studyarea")` minus the average SST in boxes 1-5.  For SST, we used the remote-sensing sea-surface temperature data sets described above. This SST-based upwelling index has been validated as a more reliable metric of upwelling off the coast of Kerala compared to wind-based upwelling indices [@Smithaetal2008].  
-
-Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017].  This time series is available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimate of precipitation over the ocean using a global 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward [@NCEI2017].
+Precipitation data were obtained from two different sources.  The first was an estimate of the monthly precipitation (in mm) over Kerala from land-based rain gauges [@KothawaleRajeevan2017].  This time series is available from the start of our landing data (1956).  The second was a remote-sensing precipitation product from the NOAA Global Precipitation Climatology Project [@Adleretal2016].  This provides estimate of precipitation over the ocean using a global 2.5 degree grid.  We used the 2.5 by 2.5 degree box defined by latitude 8.75 to 11.25 and longitude 73.25 to 75.75 for the precipitation off the coast of Kerala.  These data are available from 1979 forward [@NCEI2017].
 
 
 ## Hypotheses
@@ -212,7 +212,7 @@ Figure `r ref("fig:SSTts")`.  Key oil sardine life-history events overlaid on th
 
 Figure `r ref("fig:cov-effects")`.  Effects of covariates estimated from the GAM models. Panel A) Effect of SST during the spawning months (Jul-Sep) on catch during the spawning months.  Low SST is associated with lower that expected catch during the spawning months.  Panel B) Effect of upwelling (inshore/off-shore SST differential) during Jan-Mar of the prior season on catch during the next spawning months (Jul-Sep).  The index is the difference between offshore and inshore SST, thus a negative value indicates warmer coastal surface water than off-shore.  Warm coastal water during Jan-Mar when sardines are foraging along the coast, is associated with lower catch during the next spawning season.  Panel C) Effect of SST during the spawning months (Jul-Sep) on catch during the subsequent non-spawning months (Oct-Jun).  Low SST is associated with lower that expected catch during the following non-spawning months.  Panel D) Effect of upwelling (inshore/off-shore SST differential) during Oct-Dec of the prior season on catch during the non-spawning months (Oct-Jun) the next season.  Strong upwelling (positive upwelling index) in the early larval and juvenile period (Oct-Dec) is associated with higher than expected catch in the next season.
 
-Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without environmental covariates.  Panel A) Fitted versus observed log catch in the spawning months with only non-spawning catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon$. Panel B) Fitted versus observed log catch in the spawning months with Jan-Mar upwelling in the prior season added as a covariate to the model: $s(V_{t-1})$. Panel C) Fitted versus observed log catch in the non-spawning months with only non-spawning catch in the previous season and spawning catch two season prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon$. Panel D) Fitted versus observed log catch in the non-spawning months with current season SST in Jul-Sep ($V$) and Oct-Dec upwelling in the prior season ($W$) added as covariates: $s(V_t) + \beta W_{t-1}$.  $W$ was added linearly since the data were insufficient to estimate four non-linear effects.
+Figure `r ref("fig:fitted")`.  Fitted versus observed catch with models with and without environmental covariates.  Panel A) Fitted versus observed log catch in the spawning months with only non-spawning catch in the previous season as the covariate: $S_t = s(N_{t-1}) + \epsilon$. Panel B) Fitted versus observed log catch in the spawning months with Jan-Mar upwelling in the prior season added as a covariate to the model in panel A. This model was: $S_t = s(N_{t-1}) + s(V_{t-1}) + \epsilon$. Panel C) Fitted versus observed log catch in the non-spawning months with only non-spawning catch in the previous season and spawning catch two season prior as the covariates: $N_t = s(N_{t-1}) + s(S_{t-2}) + \epsilon$. Panel D) Fitted versus observed log catch in the non-spawning months with current season SST in Jul-Sep ($V$) and Oct-Dec upwelling in the prior season ($W$) added as covariates. This model was $N_t = s(N_{t-1}) + s(S_{t-2}) + s(V_t) + \beta W_{t-1} + \epsilon$.  $W$ was added linearly since the data were insufficient to estimate four non-linear effects.
 
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
